# ChangeLog for sys-kernel/tuxonice-sources
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.70 2009/12/17 20:37:36 pacho Exp $

  17 Dec 2009; Pacho Ramos <pacho@gentoo.org>
  tuxonice-sources-2.6.30-r6.ebuild:
  stable amd64, bug 279650

*tuxonice-sources-2.6.32 (12 Dec 2009)
*tuxonice-sources-2.6.31-r7 (12 Dec 2009)
*tuxonice-sources-2.6.30-r9 (12 Dec 2009)

  12 Dec 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  -tuxonice-sources-2.6.29-r4.ebuild, +tuxonice-sources-2.6.30-r9.ebuild,
  +tuxonice-sources-2.6.31-r7.ebuild, +tuxonice-sources-2.6.32.ebuild:
  Version bumps for new genpatches and new TuxOnIce patch version 3.0.99.41.

  03 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  tuxonice-sources-2.6.29-r4.ebuild, tuxonice-sources-2.6.30-r6.ebuild:
  stable x86, bug 279650

*tuxonice-sources-2.6.31 (29 Sep 2009)
*tuxonice-sources-2.6.30-r6 (29 Sep 2009)

  29 Sep 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  -tuxonice-sources-2.6.29-r3.ebuild, -tuxonice-sources-2.6.30-r4.ebuild,
  -tuxonice-sources-2.6.30-r5.ebuild, +tuxonice-sources-2.6.30-r6.ebuild,
  +tuxonice-sources-2.6.31.ebuild:
  Version bumps, remove old versions.

*tuxonice-sources-2.6.30-r5 (14 Aug 2009)

  14 Aug 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.30-r5.ebuild:
  Revision bump for new genpatches.

*tuxonice-sources-2.6.30-r4 (25 Jul 2009)
*tuxonice-sources-2.6.29-r4 (25 Jul 2009)

  25 Jul 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.29-r4.ebuild, +tuxonice-sources-2.6.30-r4.ebuild:
  Version bump, uses snapshot of TuxOnIce.

  04 Jun 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  -tuxonice-sources-2.6.24-r9.ebuild, -tuxonice-sources-2.6.28-r3.ebuild,
  -tuxonice-sources-2.6.28-r4.ebuild, -tuxonice-sources-2.6.28-r5.ebuild,
  -tuxonice-sources-2.6.28-r7.ebuild, -tuxonice-sources-2.6.28-r8.ebuild,