@@ -3,39 +3,43 @@ Hash: SHA1
 
 DIST current-tuxonice-for-2.6.30.patch-20090620-v1.bz2 114215 RMD160 835a301d27035f7ed030686308471a2b3b3d4346 SHA1 664df5a7c3c776835e2408b15d1966fac6e3ac7c SHA256 0c2c7969751625da59f02284bc346116a6e6a52b1b3e258cedc317bc0a16977f
 DIST current-tuxonice-for-2.6.31.patch-20090911-v1.bz2 114786 RMD160 aa41c159ebe826fc9312b5a21f1ed8cc74e88503 SHA1 f711554205de079a429c6cee620ee818399b246e SHA256 1b55326ee385bc4486302fdee5b2f0436b8183455ad26915f78d60518d466578
-DIST genpatches-2.6.28-7.base.tar.bz2 180022 RMD160 a73a586284962243eb79562c0a73f2d9833902a8 SHA1 a24244a3b9e64ef735e1e2bd0dda27af8b6510c4 SHA256 9119e3048c69ed454925f58eaa1148ccb36cb0a76453f89c7117430c7ce841aa
-DIST genpatches-2.6.28-7.extras.tar.bz2 42243 RMD160 d83c72599a0718c605433040d26ca2eec8dbff11 SHA1 2504ac8a94fa163cc15d819ab84b0a0a984114ea SHA256 f40b1ec84f4c9ba5808854d9b9f79af725e728fef223cc38b4db5f59c7e9a80a
-DIST genpatches-2.6.28-9.base.tar.bz2 227921 RMD160 0ccf3b9f6a4ceded79054da834a22b6e6b7866e2 SHA1 bd2ad165fdedb5a94d59f08e901767b0efc3b375 SHA256 a07ebc343d262ae77416fadb9c3975d64ef9365c033d49de8d390fcab4e531c2
-DIST genpatches-2.6.28-9.extras.tar.bz2 42227 RMD160 0c22176d28ae5d1d9a2278ab53b3ac6af74fb8ec SHA1 a39873ccbe87933c11108b454b24afde09ad20b2 SHA256 8d6f44fab5977f89721df72d1320560fb2345eac306fd38f31fe2194a6a67634
+DIST genpatches-2.6.30-10.base.tar.bz2 146474 RMD160 9afe48159c09b89b66133365e99455e821bb5434 SHA1 9d3c0e34a05a0fd2848422f35df839fc15b38425 SHA256 ef5fa03f8ee9bbb09b0c121a6bd6ca1ef7f82743ba05c47b380d52933f381a37
+DIST genpatches-2.6.30-10.extras.tar.bz2 24978 RMD160 95e44fd010bf659a59087b91d95c7982e6877b3e SHA1 de8e4cc7fac2f445ac077928b868c4474c7a3012 SHA256 faaad5a9cf5c92d6d97843aed4cee8c20d431e9542628410cb0c75b7ea51bc88
 DIST genpatches-2.6.30-8.base.tar.bz2 129153 RMD160 c70814ecb2f5655d98af90c0e3573789e3b346fc SHA1 e31a7405ece83613943cce79bf909b89711d74b2 SHA256 653df12f43afd880c7f64565af42e026eabf40925fd86a90114aacc9f31ca73a
 DIST genpatches-2.6.30-8.extras.tar.bz2 24978 RMD160 95e44fd010bf659a59087b91d95c7982e6877b3e SHA1 de8e4cc7fac2f445ac077928b868c4474c7a3012 SHA256 faaad5a9cf5c92d6d97843aed4cee8c20d431e9542628410cb0c75b7ea51bc88
+DIST genpatches-2.6.31-10.base.tar.bz2 240152 RMD160 e0d61d003634e7137e915f9e9c44f761b774d6d5 SHA1 d4e6ef579300d85b02d422196bd8fe3509f0c8f4 SHA256 73abf301b2f63f325f12bd93c53ceaa32623c9084b30c6795e6462046d67ef21
+DIST genpatches-2.6.31-10.extras.tar.bz2 24961 RMD160 20c268bccebfe31a2897359ae17534363d0136b4 SHA1 6ba14f68ce80068eb3e4abe1069848e85b6a31a1 SHA256 ccf0dc37d1a799bcc67bd9eb3e971b346af8495d1826d7d3f3711819812c2120
 DIST genpatches-2.6.31-2.base.tar.bz2 23763 RMD160 6cade8251df85907c1f4f7d02b5d3272932dd0a3 SHA1 b2fbb60bafaa7cf0bc9d690f5a4194f76af18320 SHA256 824e031f36cfae7c69d48bb6f0e4f99e8c2475beb051da48a6546d89513c66f5
 DIST genpatches-2.6.31-2.extras.tar.bz2 24978 RMD160 3d7efe69b70580343927b031460b225b2987791a SHA1 ad6d1b383ae3c9073c45dab6ce355695bdbf0e83 SHA256 ad111e0117f15d54a514add96a08bb15db6726fb19085e27a9d270e36e458c1d
 DIST genpatches-2.6.31-8.base.tar.bz2 173661 RMD160 8de33f63f130d8cf3750c4d379432c0ef06f02d6 SHA1 975439f30d39ebc177942aa78d73a7b4cbe8704f SHA256 e3d019ce31680c39be468c4698364ab58632ebbbf0602c2d4a87e72202d3f1e0
 DIST genpatches-2.6.31-8.extras.tar.bz2 24940 RMD160 c492175a249866311f8f8ae10a221adffc855806 SHA1 0b08312cfde1b7cf8445661ea0d26a7b2a4a47a2 SHA256 301642e9874e0afde820dbbf650172552e898bf965f1598e1ec34ce0874c5d80
 DIST genpatches-2.6.32-1.base.tar.bz2 1291 RMD160 eb7dab9d411daa279b4901802e9bbd3f3c029d61 SHA1 e77cec0ea854e7d186dc93165ae54e313a3881b9 SHA256 ad06b4bc630f90a03c217f1d5d41c2e391cdcceb08726b612aa46841d1132484
 DIST genpatches-2.6.32-1.extras.tar.bz2 24910 RMD160 bc318816a33bf03d8b74049775ffeed7a48bff29 SHA1 c2511d0be24cc5e51029c8b0f3529201180646bd SHA256 cad64b3c2adc3bc742e29fa193174574d7f44e0decbfc36746f5c69a797275d8
-DIST linux-2.6.28.tar.bz2 52665364 RMD160 47e8925220e29e239f9478228fc53543c1f7b300 SHA1 4f40f8bf3fd110b0cc6e1fea5f539c98f9959e94 SHA256 ae0d97c55efe7fce01273c97f8152af0deff5541e3bbf5b9ad98689112b54380
+DIST genpatches-2.6.32-2.base.tar.bz2 65765 RMD160 3ee42a22afdd1a2884476b0918858f87c36ea1b1 SHA1 b808b438e664188b336d0b650d04c96d9de9982a SHA256 3749df896bacfc34340877c74cb7b869170d07de02298ee9ef987323075cabe1
+DIST genpatches-2.6.32-2.extras.tar.bz2 24910 RMD160 bc318816a33bf03d8b74049775ffeed7a48bff29 SHA1 c2511d0be24cc5e51029c8b0f3529201180646bd SHA256 cad64b3c2adc3bc742e29fa193174574d7f44e0decbfc36746f5c69a797275d8
 DIST linux-2.6.30.tar.bz2 59435895 RMD160 72219f992c6266dfe78c6d803d0506c9db1e45b8 SHA1 5fb7f2ccdc59c57887d586971a157bee7af324d1 SHA256 d7b9f19b92fd5c693c16cd62f441d051b699f28ec6a175d1b464e58bacd8c78f
 DIST linux-2.6.31.tar.bz2 61494822 RMD160 c0d88e63740abf0d4f9d82557260a31643f5a01b SHA1 c6e0e6b473ba2b80d164e37cfabf294e783c03d9 SHA256 0acd83f7b85db7ee18c2b0b7505e1ba6fd722c36f49a8870a831c851660e3512
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
-DIST tuxonice-3.0.1-for-2.6.28.patch.bz2 114512 RMD160 d7b559de7a324c54a859f641bcff85296c64a518 SHA1 9f160cc6bceed2d5ee4b4fa37d3e083863393c1a SHA256 2834f48de7d4d4674307b419cad67d6c7ee7487b0b53352fe3ed64c0f0990c57
 DIST tuxonice-3.0.99.41-for-2.6.30.patch.bz2 118725 RMD160 6252a98476f9784c4dbcde01b26cee6115a61c99 SHA1 89963a8674c5055d17831896fadab9a62db7ff2c SHA256 7d68ded086f36f766f62ef6d647bc3eb806e42b76072d447634e54e0b2316bd8
 DIST tuxonice-3.0.99.41-for-2.6.31.patch.bz2 119090 RMD160 b758a7710c0472d4db7dc0452f7c74a4dc1aebb3 SHA1 19b261213de735f4fb8c1c34940ccc8419019967 SHA256 99111b7a181551d38061b6c46a05eb9da79029bbb9ec28143c55db4a385bc97c
 DIST tuxonice-3.0.99.41-for-2.6.32.patch.bz2 119072 RMD160 8d3a3a684b521603897fc7d776d5f0f1604ef8c5 SHA1 800f264d47c051d099590a70f3cca459fb098d04 SHA256 091f9e5d8fa25bfca3fe48ead4cae0f320b6b7e258ee0ec1d407ddecbd300830
-EBUILD tuxonice-sources-2.6.28-r10.ebuild 1254 RMD160 56cba0a5f163e970a7cc431461161f749e62f385 SHA1 ce714ed3fe6e321234e9768f176a3325af95e008 SHA256 f404abe6e3ada84775d1f22e2781fa278595a75de9d9fe2b6f99395e35b35a79
-EBUILD tuxonice-sources-2.6.28-r11.ebuild 1261 RMD160 0106e667cb75b8a220ffe90fdb398ecef99401e4 SHA1 f67d8ae461f68ce31af8c00350f7509f0644c12e SHA256 69f9080597c843b7aed2b66a5cbfb1e6efecbc143dbf89b2330a6dee751446a1
+DIST tuxonice-3.0.99.44-for-2.6.30.patch.bz2 119253 RMD160 c8537da7646d8b6bf51354b0f661ba286faf45df SHA1 384bab618b57d8471214823172f4b5cc92623ff2 SHA256 61238eb0934fa2ea14629a8278502bce692f626eaeb085a371751e8ae7d05e54
+DIST tuxonice-3.0.99.44-for-2.6.31.patch.bz2 119418 RMD160 936a2fb4bbc8095148145377d8b912ee38154c6b SHA1 b52521819b6003e3d054a2e5a0bd6ab7e5f70f90 SHA256 6c414846d3c398f8aa58ef66860d22f8131119a409c2b8eadb97e5fa9ad9214d
+DIST tuxonice-3.0.99.44-for-2.6.32.patch.bz2 119595 RMD160 992f0bbd57cc9a37e19da5787e6c1afab5038125 SHA1 058552a807b45d8a59fe7f86f6138a45d573a6cf SHA256 57641ed5017b1a197e6acc7292f9067607656ae076815e402abb58b5bd0746c3
+EBUILD tuxonice-sources-2.6.30-r10.ebuild 1422 RMD160 54f55546756e279bd8496f8189241f319db01df9 SHA1 f1df3895c4b5e63cf5f2a45445c4cff72548acf1 SHA256 7bef2b771f5480264dbd70a0337c3e5c17db508d33b7cbddb92f899cf62f7a22
 EBUILD tuxonice-sources-2.6.30-r6.ebuild 1417 RMD160 0e36684b21d58f2b8633b171251633d5212d3487 SHA1 6ceef4b8851250ca0aaac91f1afe01e63be2bc74 SHA256 6d1f28925aecec4c27abd1eef361ec7e8d0a6ce4a1dbd0a8d9e9ad6d15e243ba
 EBUILD tuxonice-sources-2.6.30-r9.ebuild 1420 RMD160 e5f085447763e76a222a747d00b5462d92330ffb SHA1 2a4b3b9b3417bb761db51cd9b9fad270a43decd0 SHA256 10afb14f6e963a2a34c3df0b359ffcb9c8dcd09552024d3b6919940ba0f76f0c
 EBUILD tuxonice-sources-2.6.31-r7.ebuild 1420 RMD160 6f9090a2677ae6a7f65a52cf59140d16551a1996 SHA1 719ae068f7335d8a914d38a6b79b62bb09120f3b SHA256 676337191fb25267481941610e69bdcd8fb64b0583e09171c08285ffd77bc39e
+EBUILD tuxonice-sources-2.6.31-r9.ebuild 1421 RMD160 e048a75fdc6a4e8a0551fe28b9dc47d441f56a35 SHA1 01b55d3a45399160bac46faf959dff7b820426f5 SHA256 5842c3a37fe5b1d4109eb99cba5021ed2a814767e36da5d8c06b484131b34194
 EBUILD tuxonice-sources-2.6.31.ebuild 1419 RMD160 24559c39e50d1d3acbc667afced58f957a11176b SHA1 bda8c70cf5d797739ceea36c3e9ed81fc96b4e8d SHA256 237b9b50942da4f8106b5608d78738e2505c0a30dcc2da91ba6ee59b49155e9a
+EBUILD tuxonice-sources-2.6.32-r1.ebuild 1420 RMD160 077d6249c043c7ebebc619d6381a7c64076d9d0f SHA1 cf99af90c58fdbc89ec969e5c4efccf03f61a1e0 SHA256 4eed3cfa5d505e9bc6cf7f94195600d8a1e2c35c7daf59069c3fb901fd388107
 EBUILD tuxonice-sources-2.6.32.ebuild 1417 RMD160 c77fab825c586b4b1abadc37f5d24871afc55105 SHA1 578bd59437552de47b2e78a6ed1f09dc9e4e50ce SHA256 dbb86661177f219b3e11c6af708381f558e68d54c4be2117b56406b8c4212e64
-MISC ChangeLog 39625 RMD160 f4f79e4d98b222576c2b345cdee3996b2776070a SHA1 c8e5163d8e02f68ed6145d0d07da17a6fbdeb5b4 SHA256 fbb9aee9a228d1d5662f6b3f19b4b27b532e99151fe943be6a61db27d9ac948d
+MISC ChangeLog 40017 RMD160 eaf549580a805589ed177b84e5ad64a78b67f31f SHA1 cbba720211600adea28b78d1136203fe791b18c1 SHA256 5850dae7ec526de91ab5283ea791b095217dc31c76a423980755f2b2567c0e70
 MISC metadata.xml 278 RMD160 ed11e2348ca2d8f2bd5d647afab7eedf49ed4fea SHA1 7fecfe735fd49536863c0045aa1548860ad89797 SHA256 17c4da4868f175afef2cf8bca329a88c874b117ed9c242ec2139864475606bbe
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAksqlpkACgkQCaWpQKGI+9SauwCeOHw1cNcY1uZFw1RKtO1jkz2V
-dI4An2w2vfUVOVmbLhYc0Te05tBigUaV
-=R9kK
+iEYEARECAAYFAktTlbsACgkQgo/w9rxVVVHRCQCgoz02jrl5Oo2L13PGaEGGCLd4
+dtkAn00wRX/uaUJ2ymorWId28oUXj+cp
+=aO7n
 -----END PGP SIGNATURE-----
