@@ -1,6 +1,16 @@
 # ChangeLog for sys-kernel/tuxonice-sources
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.70 2009/12/17 20:37:36 pacho Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.71 2010/01/17 22:56:51 nelchael Exp $
+
+*tuxonice-sources-2.6.32-r1 (17 Jan 2010)
+*tuxonice-sources-2.6.31-r9 (17 Jan 2010)
+*tuxonice-sources-2.6.30-r10 (17 Jan 2010)
+
+  17 Jan 2010; Krzysiek Pawlik <nelchael@gentoo.org>
+  -tuxonice-sources-2.6.28-r10.ebuild, -tuxonice-sources-2.6.28-r11.ebuild,
+  +tuxonice-sources-2.6.30-r10.ebuild, +tuxonice-sources-2.6.31-r9.ebuild,
+  +tuxonice-sources-2.6.32-r1.ebuild:
+  Revision bumps.
 
   17 Dec 2009; Pacho Ramos <pacho@gentoo.org>
   tuxonice-sources-2.6.30-r6.ebuild:
